# nkmzbot

./: .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
migrations/: 001_create_commands_table.sql
src/: commands.rs  main.rs
src/web/: mod.rs  oauth.rs  router.rs  session.rs  templates.rs
