[package]
name = "nkmzbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.11"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
dotenvy = "0.15"
