[package]
name = "nkmzbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
dotenvy = "0.15"
futures = "0.3"
base64 = "0.21"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
askama = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2.1"
